fix: saga runtime correctness (orchestration race, idempotency, Resilience4j) and native tests