@@ -17,8 +17,10 @@ import io.micrometer.core.instrument.Counter;
 import io.micrometer.core.instrument.MeterRegistry;
 import io.micrometer.core.instrument.Timer;
 import io.micrometer.observation.annotation.Observed;
+import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import org.slf4j.MDC;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -42,13 +44,20 @@ public class InventoryService {
     private final InventoryEventPublisher eventPublisher;
     private final Counter reservationSuccessCounter;
     private final Counter reservationFailedCounter;
-    private final Timer reservationTimer;
     private final Timer stepInventoryDurationTimer;
     private final Counter compensationInventoryCounter;
     private final Timer compensationDurationTimer;
     private final Counter sagaStepsExecutedCounter;
     private final Counter sagaStepsFailedCounter;
+    @Getter
     private final SagaMetricsHelper metricsHelper;
+    
+    // Thesis testing - artificial delay configuration
+    @Value("${app.artificial-delay.enabled:false}")
+    private boolean artificialDelayEnabled;
+    
+    @Value("${app.artificial-delay.duration-ms:0}")
+    private long artificialDelayMs;
 
     public InventoryService(ProductRepository productRepository,
                             InventoryReservationRepository reservationRepository,
@@ -57,18 +66,16 @@ public class InventoryService {
         this.productRepository = productRepository;
         this.reservationRepository = reservationRepository;
         this.eventPublisher = eventPublisher;
-        
-        this.reservationSuccessCounter = meterRegistry.counter(SagaMetrics.INVENTORY_RESERVATIONS_SUCCESS, 
+
+        this.reservationSuccessCounter = meterRegistry.counter(SagaMetrics.INVENTORY_RESERVATIONS_SUCCESS,
                 SagaMetrics.TAG_SERVICE, SagaMetrics.SERVICE_CHOREOGRAPHY);
-        this.reservationFailedCounter = meterRegistry.counter(SagaMetrics.INVENTORY_RESERVATIONS_FAILED, 
+        this.reservationFailedCounter = meterRegistry.counter(SagaMetrics.INVENTORY_RESERVATIONS_FAILED,
                 SagaMetrics.TAG_SERVICE, SagaMetrics.SERVICE_CHOREOGRAPHY);
-        this.reservationTimer = meterRegistry.timer(SagaMetrics.INVENTORY_RESERVATION_TIME, 
+        this.stepInventoryDurationTimer = meterRegistry.timer(SagaMetrics.STEP_INVENTORY_DURATION,
                 SagaMetrics.TAG_SERVICE, SagaMetrics.SERVICE_CHOREOGRAPHY);
-        this.stepInventoryDurationTimer = meterRegistry.timer(SagaMetrics.STEP_INVENTORY_DURATION, 
+        this.compensationInventoryCounter = meterRegistry.counter(SagaMetrics.COMPENSATIONS_INVENTORY,
                 SagaMetrics.TAG_SERVICE, SagaMetrics.SERVICE_CHOREOGRAPHY);
-        this.compensationInventoryCounter = meterRegistry.counter(SagaMetrics.COMPENSATIONS_INVENTORY, 
-                SagaMetrics.TAG_SERVICE, SagaMetrics.SERVICE_CHOREOGRAPHY);
-        this.compensationDurationTimer = meterRegistry.timer(SagaMetrics.COMPENSATION_DURATION, 
+        this.compensationDurationTimer = meterRegistry.timer(SagaMetrics.COMPENSATION_DURATION,
                 SagaMetrics.TAG_SERVICE, SagaMetrics.SERVICE_CHOREOGRAPHY,
                 SagaMetrics.TAG_STEP, SagaMetrics.STEP_INVENTORY);
         this.sagaStepsExecutedCounter = meterRegistry.counter(SagaMetrics.SAGA_STEPS_EXECUTED,
@@ -93,29 +100,40 @@ public class InventoryService {
         if (items == null || items.isEmpty()) {
             throw new IllegalArgumentException("Items list cannot be null or empty");
         }
-        
+
         String orderId = paymentEvent.getOrderId();
         try {
             MDC.put("orderId", orderId);
             stepInventoryDurationTimer.record(() -> {
                 log.info("Reserving inventory for order: {}", orderId);
                 
+                // Thesis testing - artificial delay for timeout scenarios
+                if (artificialDelayEnabled && artificialDelayMs > 0) {
+                    log.warn("Artificial delay enabled: sleeping for {} ms (thesis timeout test)", artificialDelayMs);
+                    try {
+                        Thread.sleep(artificialDelayMs);
+                    } catch (InterruptedException e) {
+                        Thread.currentThread().interrupt();
+                        log.warn("Artificial delay interrupted for order: {}", orderId);
+                    }
+                }
+
                 // Record received message and latency
                 metricsHelper.recordMessageReceived(orderId, SagaMetrics.TYPE_EVENT);
                 if (paymentEvent.getCreatedAt() != null) {
                     Duration latency = Duration.between(paymentEvent.getCreatedAt(), Instant.now());
                     metricsHelper.recordMessageLatency("payment", "inventory", latency);
                 }
-                
+
                 String reservationId = UUID.randomUUID().toString();
                 List<InventoryReservedEvent.ReservedItem> reservedItems = new ArrayList<>();
-                
+
                 try {
                     // Batch query all products at once to avoid N+1 query problem
                     List<String> productIds = items.stream()
                             .map(ItemToReserve::productId)
                             .collect(Collectors.toList());
-                    
+
                     Map<String, Product> products;
                     try {
                         List<Product> productList = productRepository.findAllByProductIdIn(productIds);
@@ -125,29 +143,29 @@ public class InventoryService {
                         log.error("Database error while finding products for order: {}", orderId, e);
                         throw e;
                     }
-                    
+
                     // Validate all products exist
                     for (String productId : productIds) {
                         if (!products.containsKey(productId)) {
                             throw new ProductNotFoundException(productId);
                         }
                     }
-                    
+
                     // Collect all products and reservations for batch operations
                     List<Product> productsToUpdate = new ArrayList<>();
                     List<InventoryReservation> reservationsToSave = new ArrayList<>();
-                    
+
                     // Process all items with pre-loaded products
                     for (ItemToReserve item : items) {
                         Product product = products.get(item.productId());
-                        
+
                         if (!product.canReserve(item.quantity())) {
                             throw new InsufficientStockException(item.productId(), item.quantity(), product.getQuantityAvailable());
                         }
-                        
+
                         product.reserve(item.quantity());
                         productsToUpdate.add(product);
-                        
+
                         InventoryReservation reservation = InventoryReservation.builder()
                                 .reservationId(reservationId + "-" + item.productId())
                                 .orderId(orderId)
@@ -156,32 +174,32 @@ public class InventoryService {
                                 .status(InventoryReservation.ReservationStatus.RESERVED)
                                 .build();
                         reservationsToSave.add(reservation);
-                        
+
                         reservedItems.add(InventoryReservedEvent.ReservedItem.builder()
                                 .productId(item.productId())
                                 .quantity(item.quantity())
                                 .build());
                     }
-                    
+
                     // Batch save all products and reservations
                     try {
                         productRepository.saveAll(productsToUpdate);
                         metricsHelper.recordDbUpdate(orderId, SagaMetrics.ENTITY_INVENTORY);
-                        
+
                         reservationRepository.saveAll(reservationsToSave);
                         metricsHelper.recordDbInsert(orderId, SagaMetrics.ENTITY_INVENTORY);
                     } catch (DataAccessException e) {
                         log.error("Database error while batch saving products/reservations for order: {}", orderId, e);
                         throw e;
                     }
-                    
+
                     String correlationId = MDC.get("correlationId");
                     if (correlationId == null || correlationId.isBlank()) {
-                        correlationId = paymentEvent.getCorrelationId() != null ? 
+                        correlationId = paymentEvent.getCorrelationId() != null ?
                                 paymentEvent.getCorrelationId() : UUID.randomUUID().toString();
                         MDC.put("correlationId", correlationId);
                     }
-                    
+
                     InventoryReservedEvent event = InventoryReservedEvent.builder()
                             .reservationId(reservationId)
                             .orderId(orderId)
@@ -190,7 +208,7 @@ public class InventoryService {
                             .correlationId(correlationId)
                             .createdAt(Instant.now())
                             .build();
-                    
+
                     // Publish event after transaction commit
                     final String finalCorrelationId = correlationId;
                     if (TransactionSynchronizationManager.isSynchronizationActive()) {
@@ -240,7 +258,7 @@ public class InventoryService {
             MDC.clear();
         }
     }
-    
+
     private void handleReservationFailure(String orderId, Exception e) {
         try {
             String correlationId = MDC.get("correlationId");
@@ -248,7 +266,7 @@ public class InventoryService {
                 correlationId = UUID.randomUUID().toString();
                 MDC.put("correlationId", correlationId);
             }
-            
+
             InventoryReservationFailedEvent failedEvent = InventoryReservationFailedEvent.builder()
                     .orderId(orderId)
                     .reason(e.getMessage())
@@ -256,7 +274,7 @@ public class InventoryService {
                     .correlationId(correlationId)
                     .createdAt(Instant.now())
                     .build();
-            
+
             // Publish event after transaction commit
             final String finalCorrelationId = correlationId;
             if (TransactionSynchronizationManager.isSynchronizationActive()) {
@@ -297,12 +315,12 @@ public class InventoryService {
         if (orderId == null || orderId.isBlank()) {
             throw new IllegalArgumentException("Order ID cannot be null or blank");
         }
-        
+
         long startTime = System.currentTimeMillis();
         try {
             MDC.put("orderId", orderId);
             log.info("Releasing inventory for order: {}", orderId);
-            
+
             List<InventoryReservation> reservations;
             try {
                 reservations = reservationRepository.findByOrderId(orderId);
@@ -310,23 +328,23 @@ public class InventoryService {
                 log.error("Database error while finding reservations for order: {}", orderId, e);
                 throw e;
             }
-            
+
             // Filter only RESERVED reservations
             List<InventoryReservation> reservedReservations = reservations.stream()
                     .filter(r -> r.getStatus() == InventoryReservation.ReservationStatus.RESERVED)
-                    .collect(Collectors.toList());
-            
+                    .toList();
+
             if (reservedReservations.isEmpty()) {
                 log.info("No reserved inventory to release for order: {}", orderId);
                 return;
             }
-            
+
             // Batch query all products at once
             List<String> productIds = reservedReservations.stream()
                     .map(InventoryReservation::getProductId)
                     .distinct()
                     .collect(Collectors.toList());
-            
+
             Map<String, Product> products;
             try {
                 List<Product> productList = productRepository.findAllByProductIdIn(productIds);
@@ -336,52 +354,52 @@ public class InventoryService {
                 log.error("Database error while finding products for order: {}", orderId, e);
                 throw e;
             }
-            
+
             // Validate all products exist
             for (String productId : productIds) {
                 if (!products.containsKey(productId)) {
                     throw new ProductNotFoundException(productId);
                 }
             }
-            
+
             // Collect all products and reservations for batch operations
             List<Product> productsToUpdate = new ArrayList<>();
             List<InventoryReservation> reservationsToUpdate = new ArrayList<>();
-            
+
             for (InventoryReservation reservation : reservedReservations) {
                 Product product = products.get(reservation.getProductId());
                 product.release(reservation.getQuantity());
                 productsToUpdate.add(product);
-                
+
                 reservation.setStatus(InventoryReservation.ReservationStatus.RELEASED);
                 reservationsToUpdate.add(reservation);
             }
-            
+
             // Batch save all products and reservations
             try {
                 productRepository.saveAll(productsToUpdate);
                 metricsHelper.recordDbUpdate(orderId, SagaMetrics.ENTITY_INVENTORY);
-                
+
                 reservationRepository.saveAll(reservationsToUpdate);
                 metricsHelper.recordDbUpdate(orderId, SagaMetrics.ENTITY_INVENTORY);
             } catch (DataAccessException e) {
                 log.error("Database error while batch saving products/reservations for order: {}", orderId, e);
                 throw e;
             }
-            
+
             String correlationId = MDC.get("correlationId");
             if (correlationId == null || correlationId.isBlank()) {
                 correlationId = UUID.randomUUID().toString();
                 MDC.put("correlationId", correlationId);
             }
-            
+
             InventoryReleasedEvent event = InventoryReleasedEvent.builder()
                     .orderId(orderId)
                     .releasedAt(Instant.now())
                     .correlationId(correlationId)
                     .createdAt(Instant.now())
                     .build();
-            
+
             // Publish event after transaction commit
             final String finalCorrelationId = correlationId;
             if (TransactionSynchronizationManager.isSynchronizationActive()) {
@@ -409,15 +427,11 @@ public class InventoryService {
 
             compensationInventoryCounter.increment();
             compensationDurationTimer.record(java.time.Duration.ofMillis(System.currentTimeMillis() - startTime));
-            
+
             log.info("Inventory released for order: {}", orderId);
         } finally {
             MDC.clear();
         }
-    }
-
-    public SagaMetricsHelper getMetricsHelper() {
-        return metricsHelper;
     }
 
     public record ItemToReserve(String productId, int quantity) {}
